examples/test/testpolicy663.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy663
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key20: value37
      key33: value5
      key32: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value45
          key46: value14
          key45: value35
      podSelector:
        matchLabels:
          key25: value10
          key41: value43
